http://team.ops4j.org/browse/PAXWEB-458 - jetty configuration as url