@@ -19,6 +19,7 @@ package org.ops4j.pax.web.service.internal;
 
 import java.io.File;
 import java.net.URI;
+import java.net.URL;
 import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
@@ -203,26 +204,13 @@ public class ConfigurationImpl extends PropertyStore
         return get( PROPERTY_TEMP_DIR );
     }
     
-	public File getConfigurationDir() {
+	public URL getConfigurationURL() {
 		try
         {
             if( !contains( PROPERTY_SERVER_CONFIGURATION_FILE ) )
             {
                 final String serverConfigurationFileName = m_propertyResolver.get( PROPERTY_SERVER_CONFIGURATION_FILE );
-                File configurationFile;
-                if( serverConfigurationFileName.startsWith( "file:" ) )
-                {
-                    configurationFile = new File( new URI( serverConfigurationFileName ) );
-                }
-                else
-                {
-                    configurationFile = new File( serverConfigurationFileName );
-                }
-                if( !configurationFile.exists() )
-                {
-					LOG.debug("Reading from configured path for the configuration property "
-							+ PROPERTY_SERVER_CONFIGURATION_FILE + " has failed");
-                }				
+                URL configurationFile = new URL( serverConfigurationFileName );
                 return set( PROPERTY_SERVER_CONFIGURATION_FILE, configurationFile );
             }
         }
